--- a/src/FlowStoreBackend/FlowStoreBackend.API/appsettings.json
+++ b/src/FlowStoreBackend/FlowStoreBackend.API/appsettings.json
@@ -2,11 +2,19 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=;Port=;Database=;Username=;Password="
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Mirocosft": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfiguration": {
+    "Issuer": null,
+    "Audience": null,
+    "LifeTime": null,
+    "SecretKey": null
+  }
 }
