--- a/src/FlowStoreBackend/FlowStoreBackend.Logic/FlowStoreBackend.Logic.csproj
+++ b/src/FlowStoreBackend/FlowStoreBackend.Logic/FlowStoreBackend.Logic.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FlowStoreBackend.Common\FlowStoreBackend.Common.csproj" />
     <ProjectReference Include="..\FlowStoreBackend.Database\FlowStoreBackend.Database.csproj" />
   </ItemGroup>
 
