--- a/src/FlowStoreBackend/FlowStoreBackend.Common/FlowStoreBackend.Common.csproj
+++ b/src/FlowStoreBackend/FlowStoreBackend.Common/FlowStoreBackend.Common.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="NodaTime" Version="3.0.10" />
   </ItemGroup>
 
 </Project>
