--- a/src/FlowStoreBackend/FlowStoreBackend.API/FlowStoreBackend.API.csproj
+++ b/src/FlowStoreBackend/FlowStoreBackend.API/FlowStoreBackend.API.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="6.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Yandex.Checkout.V3" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
