--- a/src/FlowStoreBackend/FlowStoreBackend.Common/FlowStoreBackend.Common.csproj
+++ b/src/FlowStoreBackend/FlowStoreBackend.Common/FlowStoreBackend.Common.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="NodaTime" Version="3.0.10" />
+    <PackageReference Include="Yandex.Checkout.V3" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
