--- a/src/FlowStoreBackend/FlowStoreBackend.Logic/FlowStoreBackend.Logic.csproj
+++ b/src/FlowStoreBackend/FlowStoreBackend.Logic/FlowStoreBackend.Logic.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="6.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Yandex.Checkout.V3" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
